@@ -35,7 +35,7 @@ public class SentryClientTest extends BaseTest {
 
     @BeforeMethod
     public void setup() {
-        contextManager.getContext().clear();
+        contextManager.clear();
     }
 
     @Test
