@@ -28,7 +28,7 @@ public class BreadcrumbTest extends BaseTest {
 
     @BeforeMethod
     public void setup() {
-        contextManager.getContext().clear();
+        contextManager.clear();
     }
 
     @Test
