@@ -26,7 +26,7 @@ public class UserTest extends BaseTest {
 
     @BeforeMethod
     public void setup() {
-        contextManager.getContext().clear();
+        contextManager.clear();
     }
 
     @Test
